[package]
name = "bevy-sandbox"
version = "0.1.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.3.0"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }
rand = "0.7.3"
roux = "1.2.0"
reqwest = "0.10.8"
tokio = { version = "^0.2.22", features = ["rt-threaded", "macros"] }
image = "0.23.12"
serde = "1.0.117"
anyhow = "1.0.34"
futures = "0.3.8"

num-complex = "0.3"

# bevy_prototype_lyon = "0.1.3"

# bevy_rapier2d = "0.5.0"
