[package]
name = "bevy-sandbox"
version = "0.1.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.3.0"
bevy = { version = "0.4" }
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master" }
rand = "0.8.2"
roux = "1.2.0"
reqwest = "0.11"
image = "0.23.12"
serde = "1.0.117"
anyhow = "1.0.34"
tokio = "1.1.0"
num-complex = "0.3"

#bevy_prototype_lyon = "0.1.5"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", branch = "master" }


# bevy_rapier2d = "0.5.0"

# [profile.release]
# debug = true