[package]
name = "bevy-sandbox"
version = "0.1.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }
rand = "0.8.2"
roux = "1.2.0"
reqwest = "0.11"
image = "0.23.12"
serde = "1.0.117"
anyhow = "1.0.34"
tokio = { version = "1.22.0", features = ["full"] }
num-complex = "0.3"

bevy_prototype_lyon = "0.7.0"
futures = "0.3.25"


# bevy_rapier2d = "0.5.0"

# [profile.release]
# debug = true
